[package]
name = "river"
version = "0.2.0"
authors = ["municorn <municorn@musicaloft.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = [ "wasmbind" ] }
console_error_panic_hook = "0.1.6"
log = "0.4"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"
yew-feather = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]
