[package]
name = "river-core"
version = "0.1.0"
authors = ["municorn <municorn@musicaloft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"                    # Date and time library for Rust
serde = { version = "1.0", features = [ "derive" ] }
anyhow = "1.0"
