[package]
authors = ["municorn <municorn@musicaloft.com>"]
edition = "2018"
name = "river-server"
version = "0.1.0"

[dependencies]
anyhow = "*"
chrono = "*"
serde_json = "*"
tokio-tungstenite = "*"
tokio = { version = "*", features = ["full"] }
postgres = "0.19.1" # A native, synchronous PostgreSQL client
river-core = { path = "../river-core/" }
rocket = "0.4.7" # Web framework for nightly with a focus on ease-of-use, expressibility, and speed. 
diesel = { version = "1.4", features = ["postgres", "chrono"] } # A safe, extensible ORM and Query Builder for PostgreSQL, SQLite, and MySQL
dotenv = "0.15" # A `dotenv` implementation for Rust
futures = "*"
